# poly_fantasy

./: .env.example  .gitignore  Cargo.toml  PLAN.md  README.md  polyfantasy.db-shm  polyfantasy.db-wal  run_tests.sh  sync.py
.github/workflows/: ci.yml
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ToastList.tsx
frontend/src/lib/: api.ts  i18n.ts  locale.tsx  names.ts  supabase.ts  toast.tsx
frontend/src/pages/: Auth.tsx  Dashboard.tsx  EventDetail.tsx  Leaderboard.tsx  Settings.tsx
frontend/test-results/debug-debug-page-state-chromium/: error-context.md
frontend/tests/: debug.spec.ts  e2e.spec.ts  smoke.spec.ts
src/: api.rs  db.rs  gamma_client.rs  main.rs  models.rs  supabase_writer.rs
supabase/: schema.sql
tests/: debug_test.rs  quick_debug.rs  resolve_test.rs
