[package]
name = "polymarket-fantasy"
version = "0.1.0"
edition = "2021"
description = "Fantasy sports sync bot — pulls events from Polymarket into Supabase"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
dotenvy = "0.15"
