[package]
name = "polymarket-fantasy-sync"
version = "0.1.0"
edition = "2021"
description = "Sync bot — fetches Polymarket events and writes to Supabase REST API"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenvy = "0.15"
tokio-cron-scheduler = "0.11"
